@@ -25,7 +25,7 @@
     mod_auth_db.c<br />
      <a href="module-dict.html#ModuleIdentifier"
     rel="Help"><strong>Module Identifier:</strong></a>
-    db_auth_module</p>
+    auth_db_module</p>
 
     <h2>Summary</h2>
 
